--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
 body {
   font-family: $primary-font;
