--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -34,13 +34,14 @@
 
   &-content {
     &-subtitle {
-      font-size: 14px;
+      font-size: 18px;
       font-weight: 400;
       color: $primary-color;
       text-transform: uppercase;
       margin-bottom: 10px;
       display: inline-block;
       letter-spacing: 3px;
+      font-weight: 700;
     }
 
     h1 {
