--- a/layouts/partials/feature.html
+++ b/layouts/partials/feature.html
@@ -6,20 +6,8 @@
           <div class="col-lg-6">
             <div class="feature-image">
               <img
-                src="images/feature/feature-shape-01.svg"
-                class="feature-image-shape1"
-                style="left: -25%; top: 10%;"
-                alt="feature-image-shape"
-              />
-              <img
                 src={{ .image1 }}
                 alt="feature-image"
-              />
-              <img
-                src="images/feature/feature-shape-02.svg"
-                style="right: -13%; top: 45%;"
-                class="feature-image-shape2"
-                alt="feature-image-shape"
               />
             </div>
           </div>
@@ -49,36 +37,16 @@
               <p>
                 {{ .description2nd }}
               </p>
-              <div class="feature-content-list">
-                <ul>
-                  {{ $Section := .checkItem }}
-                  {{ range $Section }}
-                    <li>
-                      <i class="ti-check"></i>
-                      <p> {{ .text }} </p>
-                    </li>
-                  {{ end }}
-                </ul>
-              </div>
+              <a href="#" data-text={{ .buttonText2nd }} class="btn btn-primary">
+                <span>{{ .buttonText2nd }}</span>
+              </a>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="feature-image">
               <img
-                src="images/feature/feature-shape-03.svg"
-                class="feature-image-shape3"
-                style="right: -25%; top: 10%;"
-                alt="feature-image-shape"
-              />
-              <img
                 src={{ .image2 }}
                 alt="feature-image"
-              />
-              <img
-                src="images/feature/feature-shape-04.svg"
-                style="left: -20%; top: 42%;"
-                class="feature-image-shape4"
-                alt="feature-image-shape"
               />
             </div>
           </div>
