--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,9 +2,11 @@
 
 {{ partial "heroArea.html" . }}
 
+{{ partial "feature.html" . }}
+
 {{ partial "services.html" . }}
 
-{{ partial "feature.html" . }}
+{{ partial "feature2.html" . }}
 
 {{ partial "screenshots.html" . }}
 
