--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -3,7 +3,7 @@ $body-color: #FBFDFB;
 $bg-color:#DFF1F4;
 $primary-color: #425C46;
 $secondary-color: #5477F8;
-$text-color: #8C8C94;
+$text-color: #757587;
 $text-color-dark: #273437;
 $site-ease: cubic-bezier(0.77, 0, 0.175, 1);
 $border-color: #EDEDF4;
