Change background color

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -61,7 +61,7 @@ a {
     background-color: $white;
     text-align: center;
     margin: 130px 100px 0;
-    background: #f9f2ea;
+    background: #d1ddd3;
     border-radius: 50px;
     @include desktop-xl {
       margin: 130px 50px 0;
