--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,10 +1,8 @@
 .footer {
   position: relative;
-  padding: 220px 0 120px;
+  padding: 70px 0 120px;
   overflow: hidden;
-  background: url(../images/footer/footer-bg.svg);
-  background-position: top center;
-  background-size: cover;
+  background: #d1ddd3;
   @include mobile {
     padding: 120px 0 50px;
   }
