--- a/layouts/partials/feature2.html
+++ b/layouts/partials/feature2.html
@@ -1,6 +1,6 @@
 {{ with .Site.Data.feature }}
   {{ if .enable }}
-    <section class="feature" id="feature">
+    <section class="feature" id="feature2">
       <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 order-2 order-lg-1">
