--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,7 +33,7 @@
       <div class="account-list list-inline">
         <li class="list-inline-item">
           <a href="{{ "contact" | absURL }}" class="btn btn-sm btn-violate">
-            Get in touch
+            Hubungi kami
           </a>
         </li>
       </div>
