--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -1,6 +1,6 @@
 {{ with .Site.Data.services }}
   {{ if .enable }}
-    <section class="service">
+    <section class="service" id="product">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
