--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -7,8 +7,8 @@
         <div class="col-12">
           <h2>{{ .Title }}</h2>
           <p>
-            Don't like forms send us an
-            <a href="mailto:{{ .Site.Params.email }}">email</a>
+            Tidak ingin mengisi form? Anda juga bisa menghubungi kami melalui
+            <a href="mailto:{{ .Site.Params.email }}">e-mail</a>
           </p>
         </div>
       </div>
@@ -26,7 +26,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="Full Name"
+                placeholder="Nama Lengkap"
                 name="Name"
                 required
               />
@@ -35,39 +35,25 @@
               <input
                 type="email"
                 class="form-control"
-                placeholder="Email"
+                placeholder="E-mail"
                 name="email"
                 required
               />
             </div>
             <div class="col-12">
-              <input type="text" class="form-control" placeholder="Subject" name="subject" />
+              <input type="text" class="form-control" placeholder="Judul" name="subject" />
             </div>
             <div class="col-12">
               <textarea
                 class="form-control"
-                placeholder="Message"
+                placeholder="Isi pesan"
                 required
                 cols="30"
                 rows="7"
                 name="message"
               ></textarea>
             </div>
-            <div class="col-6 align-self-center">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="termCondition"
-                  name="terms"
-                  required
-                />
-                <label class="form-check-label" for="termCondition">
-                  Accept <a href="#">terms and conditions</a>
-                </label>
-              </div>
-            </div>
-            <div class="col-6 text-right">
+            <div class="col-12 align-self-center text-center">
               <button id="contact-form-button" class="btn btn-primary-filled" type="submit">
                 Submit
               </button>
