Add link to buttons on features

--- a/layouts/partials/feature2.html
+++ b/layouts/partials/feature2.html
@@ -11,7 +11,7 @@
                 <p>
                   {{ .description2nd }}
                 </p>
-                <a href="#" data-text={{ .buttonText2nd }} class="btn btn-primary">
+                <a href="{{ .URL }} {{ .button2URL }}" data-text={{ .buttonText2nd }} class="btn btn-primary">
                   <span>{{ .buttonText2nd }}</span>
                 </a>
               </div>
