--- a/layouts/partials/feature.html
+++ b/layouts/partials/feature.html
@@ -22,7 +22,7 @@
               <p>
                 {{ .description2 }}
               </p>
-              <a href="#" data-text={{ .buttonText }} class="btn btn-primary">
+              <a href="{{ .URL }} {{ .buttonURL }}" data-text={{ .buttonText }} class="btn btn-primary">
                 <span>{{ .buttonText }}</span>
               </a>
             </div>
