--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-4">
         <div class="footer-description">
-          <img src="{{ .Site.Params.logo | absURL }}" alt="logo">
+          <img src="{{ .Site.Params.logo | absURL }}" alt="logo" width="200" height="52">
           <p>
             {{ .Site.Params.copyright1 }}
               </br>
