--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -7,7 +7,7 @@
         <div class="col-12">
           <h2>{{ .Title }}</h2>
           <p>
-            Tidak ingin mengisi form? Anda juga bisa menghubungi kami melalui
+            Bisa juga melalui
             <a href="mailto:{{ .Site.Params.email }}">e-mail</a>
           </p>
         </div>
