--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -16,7 +16,7 @@
               <div class="service-item">
                 <div class="service-icon">
                   <i>
-                    <img src="{{ .image }}" width="200" height="200"/>
+                    <img src="{{ .image }}" width="200" height="200" alt="Foto produk {{ .title }}"/>
                   </i>
                 </div>
                 <div class="service-content">
