--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
         </div>
       </div>
       <div class="col-lg-8 mx-auto">
-        <form action="#" class="footer-subscribe-form" data-netlify="true" name="email-subscribe">
+        <form method="POST" class="footer-subscribe-form" data-netlify="true" name="email-subscribe">
           <div class="from-group">
             <div class="input-group">
               <input type="email" class="form-control" placeholder="Masukkan e-mail Anda untuk berlangganan">
