--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
         <form method="POST" class="footer-subscribe-form" data-netlify="true" name="email-subscribe">
           <div class="from-group">
             <div class="input-group">
-              <input type="email" class="form-control" placeholder="Masukkan e-mail Anda untuk berlangganan">
+              <input type="email" class="form-control" placeholder="Masukkan e-mail Anda untuk berlangganan" name="email">
               <div class="subscribe">
                 <button class="btn btn-subscribe" type="submit">
                   <span class="btn-area">
@@ -94,7 +94,5 @@
 <link href="{{ $style.Permalink }}" rel="stylesheet" />
 {{ $vendor := resources.Get "js/vendor.js" | minify }}
 <script src="{{ $vendor.Permalink }}"></script>
-{{ $formhandler := resources.Get "js/form-handler.js" | minify }}
-<script src="{{ $formhandler.Permalink }}"></script>
 {{ $script := resources.Get "js/script.js" | minify }}
 <script src="{{ $script.Permalink }}"></script>
