--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -124,6 +124,39 @@ a {
       }
     }
   }
+  &-contact {
+    padding: 130px 0 200px;
+    background-color: $white;
+    text-align: center;
+    margin: 130px 100px 0;
+    background: #d1ddd3;
+    border-radius: 50px;
+    @include desktop-xl {
+      margin: 130px 50px 0;
+    }
+    @include desktop {
+      margin: 130px 30px 0;
+      border-radius: 25px;
+      padding: 80px 0 180px;
+    }
+    @include mobile {
+      margin: 100px 15px 0;
+    }
+    h1 {
+      @include desktop {
+        font-size: 40px;
+      }
+      margin-bottom: 20px;
+    }
+    h2 {
+      font-size: 40px;
+      line-height: 52px;
+      @include mobile {
+        font-size: 30px;
+        line-height: 42px;
+      }
+    }
+  }
   &-content {
     padding: 10px 50px 30px;
     &-wrapper {
