--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 {{ "<!--contactHeader.html-->" | safeHTML }}
-  <section class="page-header">
+  <section class="page-contact">
     <div class="container">
       <div class="row">
         <div class="col-12">
