Change message subject placeholder

--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -41,7 +41,7 @@
               />
             </div>
             <div class="col-12">
-              <input type="text" class="form-control" placeholder="Judul" name="subject" />
+              <input type="text" class="form-control" placeholder="Judul pesan" name="subject" />
             </div>
             <div class="col-12">
               <textarea
