--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -55,7 +55,7 @@
           </p>
           <ul class="footer-description-social">
             <li>
-              <a href="{{ .Site.Params.social.instagram }}"><i class="ti-instagram"></i></a>
+              <a href="{{ .Site.Params.social.instagram }}"><i class="ti-instagram"></i>Instagram</a>
             </li>
           </ul>
         </div>
