--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,6 +12,7 @@
     <button
       class="navbar-toggler collapsed"
       type="button"
+      aria-label="navigation button"
       data-toggle="collapse"
       data-target="#mainNav"
     >
