Inline critical CSS

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="{{ "themify/themify.css" | absURL }}">
 
   {{ "<!-- Critical CSS -->" | safeHTML }}
-  {{ $stylex := resources.Get "scss/critical.scss" | resources.ToCSS | minify }}
-  <link href="{{ $stylex.Permalink }}" rel="stylesheet" />
+  {{ with resources.Get "scss/critical.scss" | resources.ToCSS | minify }}
+  <style> {{ .Content | safeCSS }} </style>
+  {{ end }}
 
   {{ "<!--Favicon-->" | safeHTML }}
   <link rel="shortcut icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
