--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
+  {{ partial "meta.html" . }}
+  
   <meta charset="utf-8" />
-  <title>{{ .Title }}</title>
-
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,8 +18,9 @@
   {{ "<!--Favicon-->" | safeHTML }}
   <link rel="shortcut icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
   <link rel="icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
-  {{ with site.Params.googleAnalytics }}
+
   {{ "<!-- Google Analytics -->" | safeHTML }}
+  {{ with site.Params.googleAnalytics }}
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -29,4 +30,7 @@
     gtag('config', '{{ . }}');
   </script>
 	{{ end }}
+
+
+        
 </head>
